# docs-search

./: .gitignore  README.md
.github/workflows/: rust.yaml
app/: docker-compose.yml  main.py  schemas.py
parser/: Cargo.toml  docs_parser.pyi  pyproject.toml
parser/assets/: 6 сем англ.docx  Book.xlsx  Presentation.pptx  main.typ  pres_with_png.pptx  pres_without_png.pptx  some_text.docx  text_and_tables.docx  text_tables_png.docx  too_many_png.docx  Презентация_Часть1.pptx  Сроки_зимней_сессии_и_пересдач_25_26.xls  возможные вопросы теста.docx
parser/assets/tests_results/: extract_from_image.txt  extract_from_image_ru.txt  extract_from_pdf_file.txt  extract_media.txt  extract_text_from_docx_with_png.txt  extract_text_from_docx_without_png.txt  extract_text_from_pptx_with_png.txt  extract_text_from_pptx_without_png.txt  extract_text_from_xlsx.txt  extract_xml_info.txt
parser/src/: constants.rs  converter.rs  errors.rs  lib.rs  match_parsers.rs
parser/src/parsers/: docx.rs  image.rs  mod.rs  pdf.rs  pptx.rs  text.rs  xlsx.rs  xml.rs
